# ripple

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.knowledge-test.yml  index.html  package-lock.json  package.json  ripple.db-shm  ripple.db-wal  start.bat  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
Agents/: Aemeath.txt  Nova.txt  agent_map.json
docs/: RAG_DESIGN.md  architecture.md  database.md  ipc.md  knowledge-service.md  model-providers.md  performance.md  plugin-development.md  rag.md  roadmap.md  tech-stack.md  ui-conventions.md
e2e/specs/: native-smoke.spec.ts
plugins/clipboard/: clipboard.py  manifest.json
plugins/code-runner/: code_runner.py  config.json  manifest.json
plugins/file-ops/: config.json  file_ops.py  manifest.json
plugins/hello/: config.json  manifest.json
plugins/image-gen/: config.json  image_gen.py  manifest.json
plugins/open-app/: manifest.json  open_app.py
plugins/reminder/: manifest.json  reminder.py
plugins/screenshot/: manifest.json  screenshot.py
plugins/send-email/: config.json  manifest.json  send_email.py
plugins/shell-exec/: config.json  manifest.json  shell_exec.py
plugins/translator/: manifest.json  translator.py
plugins/url-fetch/: fetch.py  manifest.json
plugins/web-search/: manifest.json  search.py
plugins/wiki-search/: manifest.json  wiki_search.py
prompts/: aimemo_prompt.txt  tag_master.txt  tool_rules.txt
scripts/knowledge-service/: run-dev.ps1  test-auth-acl.ps1
src/: App.tsx  README.md  main.tsx
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/capabilities-e2e/: default.json  settings.json
src-tauri/crates/commands/: README.md
src-tauri/crates/context/: Cargo.toml  README.md
src-tauri/crates/context/src/: builder.rs  counter.rs  lib.rs  summarizer.rs
src-tauri/crates/conversation-store/: Cargo.toml  README.md
src-tauri/crates/conversation-store/src/: conversation_repo.rs  db.rs  error.rs  lib.rs  memory_repo.rs  message_repo.rs  migration.rs
src-tauri/crates/core/: Cargo.toml  README.md
src-tauri/crates/core/src/: error.rs  lib.rs  stream.rs  types.rs
src-tauri/crates/knowledge-domain/: Cargo.toml
src-tauri/crates/knowledge-domain/src/: lib.rs
src-tauri/crates/knowledge-ingest/: Cargo.toml
src-tauri/crates/knowledge-ingest/src/: lib.rs
src-tauri/crates/knowledge-retrieval/: Cargo.toml
src-tauri/crates/knowledge-retrieval/src/: lib.rs
src-tauri/crates/knowledge-server/: Cargo.toml
src-tauri/crates/knowledge-server/src/: config.rs  embedding.rs  main.rs  routes.rs  state.rs  worker.rs
src-tauri/crates/knowledge-store/: Cargo.toml
src-tauri/crates/knowledge-store/migrations/: 0001_migration_audit.sql  0002_identity_acl.sql  0003_service_bootstrap.sql  0004_sources_jobs.sql  0005_documents_chunks.sql  0006_retrieval_citations.sql  0007_document_provenance.sql  0008_embedding_provider_profiles.sql
src-tauri/crates/knowledge-store/src/: lib.rs
src-tauri/crates/knowledge-testkit/: Cargo.toml
src-tauri/crates/knowledge-testkit/src/: lib.rs
src-tauri/crates/model-provider/: Cargo.toml  README.md
src-tauri/crates/model-provider/src/: lib.rs  registry.rs  traits.rs
src-tauri/crates/model-provider/src/providers/: mod.rs  openai.rs
src-tauri/crates/plugin-engine/: README.md
src-tauri/crates/rag/: Cargo.toml  README.md
src-tauri/crates/rag/src/: chunking.rs  embedding.rs  file_read.rs  lib.rs  store.rs  types.rs
src-tauri/crates/security/: Cargo.toml  README.md
src-tauri/crates/security/src/: key_manager.rs  lib.rs
src-tauri/crates/streaming/: Cargo.toml  README.md
src-tauri/crates/streaming/src/: buffer.rs  lib.rs
src-tauri/crates/tool-registry/: README.md
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  chat.rs  conversation.rs  export.rs  log.rs  memory.rs  message.rs  mod.rs  plugins.rs  rag_cmd.rs  settings.rs  stats.rs  test.rs  test_chat.rs  themes.rs  tools.rs
src/components/MarkdownRenderer/: index.tsx  languages.ts
src/components/ToolCallCard/: index.tsx
src/components/chat/: EmptyChatPlaceholder.tsx  MessageBubble.tsx  MessageSkeleton.tsx  StreamingMessage.tsx  ToolActivity.tsx  VirtualMessageList.tsx
src/components/common/: AppLogo.tsx  ApprovalDialog.tsx  ContextMenu.tsx  ImagePreview.tsx  IpcStatusIndicator.tsx  MentionPopover.tsx  ModelSelector.tsx
src/components/layout/: ChatHeader.tsx  ChatInputArea.tsx  ErrorBanner.tsx  Sidebar.tsx
src/components/settings/: GeneralSettings.tsx  KnowledgePanel.tsx  LogsPanel.tsx  MemoryLabPanel.tsx  PluginsPanel.tsx  SettingsDialog.tsx  SettingsWindow.tsx  StatsPanel.tsx
src/components/settings/knowledge/: ConfirmDeleteDialog.tsx  DocCard.tsx  DocPreviewDialog.tsx  DocPropsDialog.tsx  file-cfg.ts
src/components/sidebar/: AgentEditorPanel.tsx  AgentListView.tsx  ConversationListItem.tsx  ConversationListView.tsx
src/components/theme/: AiThemeDialog.tsx  ThemeCard.tsx  ThemeWorkshop.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  slider.tsx  tabs.tsx  textarea.tsx
src/hooks/: useIpcStatus.ts  useLogs.ts  useMediaQuery.ts  useMemoryLab.ts  useMentionCompletion.ts  usePlugins.ts  useSearch.ts  useStats.ts  useStreamEvents.ts  useTheme.ts
src/lib/: constants.ts  openSettings.ts  theme-contrast.ts  theme-prompt.ts  theme-runtime.ts  utils.ts
src/services/: agent.service.ts  chat.service.ts  conversation.service.ts  export.service.ts  index.ts  invoke.ts  kb.service.ts  log.service.ts  memory.service.ts  message.service.ts  plugin.service.ts  settings.service.ts  stats.service.ts  system.service.ts  theme.service.ts
src/stores/: agentStore.ts  chatStore.ts  kbStore.ts  settingsStore.ts  uiStore.ts
src/styles/: design-tokens.css  globals.css
src/test/: stream-contract.test.ts  useLogs.test.tsx
src/types/: index.ts  theme.ts
