[package]
name = "ripple-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "ripple_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# 内部 crate（从 workspace 引用）
ripple-core = { workspace = true }
ripple-model-provider = { workspace = true }
ripple-streaming = { workspace = true }
ripple-context = { workspace = true }
ripple-security = { workspace = true }
ripple-conversation-store = { workspace = true }
ripple-rag = { workspace = true }

# 异步
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dirs = "6"
once_cell = "1"
rusqlite = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/model-provider",
    "crates/streaming",
    "crates/context",
    "crates/security",
    "crates/conversation-store",
    "crates/rag",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rand = "0.8"

# 内部 crate 互引
ripple-core = { path = "crates/core" }
ripple-model-provider = { path = "crates/model-provider" }
ripple-streaming = { path = "crates/streaming" }
ripple-context = { path = "crates/context" }
ripple-security = { path = "crates/security" }
ripple-conversation-store = { path = "crates/conversation-store" }
ripple-rag = { path = "crates/rag" }
