[package]
name = "ripple-knowledge-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
ripple-knowledge-domain = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
