[package]
name = "ripple-knowledge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ripple-knowledge-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
ripple-knowledge-domain = { workspace = true }
ripple-knowledge-ingest = { workspace = true }
ripple-knowledge-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
