[package]
name = "ripple-streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ripple-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
